examples/test/testpolicy4335.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4335
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key38: value1
      key11: value13
      key9: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value39
      podSelector:
        matchLabels:
          key48: value34
          key19: value25
